--- a/composicao.html
+++ b/composicao.html
@@ -27,4 +27,5 @@ texto e texto do bloco 2.</p>
 </div> 
 <!--Encerra o div da classe base iniciado antes. -->
 </body>
-</html>AAABBBCCC
+</html>A-
+ACABABBCCC
